--- a/Hold Shift and Check Checkboxes/index-START.html
+++ b/Hold Shift and Check Checkboxes/index-START.html
@@ -102,6 +102,16 @@
       function handleCheck(e) {
         let inBetween = false;
         if (e.shiftKey && this.checked) {
+          checkboxes.forEach((checkbox) => {
+            console.log(checkbox);
+            if (checkbox === this || checkbox === lastChecked) {
+              inBetween = !inBetween;
+              console.log("Starting to check them in between");
+            }
+            if (inBetween) {
+              checkbox.checked = true;
+            }
+          });
         }
       }
       lastChecked = true;
